--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 				<!-- ADD LINKS -->
 				<li class="nav-list"><a href="#" class="nav-link">About</a></li>
 				<li class="nav-list"><a href="#" class="nav-link">F.A.Q</a></li>
+				<li class="nav-list"><a href="#" class="nav-link">Privacy</a></li>
+				<li class="nav-list"><a href="#" class="nav-link">Terms And Condition</a></li>
 			</ul>
 		</nav>
 		<main>
