--- a/FAQs.html
+++ b/FAQs.html
@@ -14,18 +14,22 @@
 			<ul class="nav-menu">
 				<!-- ADD LINKS -->
 				<li class="nav-list"><a href="index.html" class="nav-link">Home</a></li>
-				<li class="nav-list"><a href="about.html" class="nav-link">About</a></li>
+				<li class="nav-list">
+					<a href="about.html" class="nav-link">About</a>
+				</li>
 			</ul>
 		</nav>
 		<main>
-            <section class="FAQs">
-
-            </section>
-		
+			<section class="FAQs"></section>
 		</main>
 		<footer>
 			<!-- ADD DISCORD INVITE LINK -->
-			<p>Built by <a href="https://codingwithdrew.com/" target="_blank">Coding With Drew</a> Discord Community
+			<p>
+				Built by
+				<a href="https://codingwithdrew.com/" target="_blank"
+					>Coding With Drew</a
+				>
+				Community
 			</p>
 			<div class="socials">
 				<!-- ADD SOCIAL ICONS LINKED TO THE COMMUNITY SOCIALS  -->
