--- a/about.html
+++ b/about.html
@@ -5,7 +5,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<!-- LINK CSS  -->
-		<!-- LINK ICON PACK CDN  -->
+		<link
+			href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
+			rel="stylesheet"
+		/>
 		<title>About</title>
 	</head>
 	<body>
@@ -14,29 +17,50 @@
 			<ul class="nav-menu">
 				<!-- ADD LINKS -->
 				<li class="nav-list"><a href="index.html" class="nav-link">Home</a></li>
-				<li class="nav-list"><a href="FAQs.html" class="nav-link">FAQs</a></li>
+				<li class="nav-list">
+					<a href="about.html#faqs" class="nav-link">FAQs</a>
+				</li>
 			</ul>
 		</nav>
 		<main>
-            <section class="about">
-                <h1>About this Project</h1>
-                <p>
-                    Ever do the [100daysofcode.com](https://100daysofcode.com) challenge and find yourself skipping, forgetting which day, etc?
-                </p>
-                <p>
-                    Well this project aims to correct that with friendly reminders, a simple way to keep track of what day you are on, and will allow you to tweet directly from it (hopefully!).
-                </p>
-                <p>
-                    This is an Opensource project designed by a group of aspiring software engineers learning about collaboration on Github. We hope you find it a really useful tool to track your progress through 100daysofcode. 
-                </p>
-            </section>
-		
+			<section class="about">
+				<h1>About this Project</h1>
+				<p>
+					Ever do the
+					<a target="_blank " href="https://100daysofcode.com"
+						>[100daysofcode.com]</a
+					>
+					challenge and find yourself skipping, forgetting which day, etc?
+				</p>
+				<p>
+					Well this project aims to correct that with friendly reminders, a
+					simple way to keep track of what day you are on, and will allow you to
+					tweet directly from it (hopefully!).
+				</p>
+				<p>
+					This is an Opensource project designed by a group of aspiring software
+					engineers learning about collaboration on Github. We hope you find it
+					a really useful tool to track your progress through 100daysofcode.
+				</p>
+			</section>
+			<section class="faqs" id="faqs">
+				<h2>F.A.Qs</h2>
+				<!-- ONLY QUESTION SHOULD BE VISIBLE ANSWER SHOULD BE DISPLAYED ON CLICK  -->
+			</section>
 		</main>
 		<footer>
-			<!-- ADD DISCORD INVITE LINK -->
-			<p>Built by <a href="https://codingwithdrew.com/" target="_blank">Coding With Drew</a> Discord Community
-            </p>
+			<p>
+				Built by
+				<a href="https://codingwithdrew.com/" target="_blank"
+					>Coding With Drew</a
+				>
+				Community
+			</p>
 			<div class="socials">
+				<a href="#" target="_blank"> <i class="ri-discord-line"></i> </a>
+
+				<a href="#" target="_blank"><i class="ri-twitter-line"></i></a>
+				<a href="#" target="_blank"><i class="ri-youtube-line"></i></a>
 				<!-- ADD SOCIAL ICONS LINKED TO THE COMMUNITY SOCIALS  -->
 			</div>
 		</footer>
