--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<!-- SHOULD CONTAIN USER DETAILS  -->
 			</section>
 			<section class="Calendar">
-				<!-- SOULD CONTAIN CALENDER WHICH CIRCLES CURRENT DATE AND MARKS DATE WITH GIT COMMITS GREEN  -->
+				<!-- SOULD CONTAIN CALENDAR WHICH CIRCLES CURRENT DATE AND MARKS DATE WITH GIT COMMITS GREEN  -->
 			</section>
 
 			<section class="Repos">
