--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<nav class="nav-bar">
-			<h1><a href="#">Logo</a></h1>
+			<h1><a href="https://hacktoberfest.com" target="_blank"> <img src="./images/hack.jpg" alt="hacktober fest logo" style="border-radius: 50%;"/> </a></h1>
 			<ul class="nav-menu">
 				<!-- ADD LINKS -->
 				<li class="nav-list"><a href="#" class="nav-link">Privacy</a></li>
