Fixed typo "Should" and "Calendar"

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				</div>
 			</section>
 			<section class="Calendar">
-				<!-- SOULD CONTAIN CALENDER WHICH CIRCLES CURRENT DATE AND MARKS DATE WITH GIT COMMITS GREEN  -->
+				<!-- SHOULD CONTAIN CALENDAR WHICH CIRCLES CURRENT DATE AND MARKS DATE WITH GIT COMMITS GREEN  -->
 			</section>
 
 			<section class="Repos">
